--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://root:root@postgres:5432/mydb?schema=public"
+DATABASE_URL="postgresql://root:root@localhost:5432/mydb?schema=public"
+JWT_SECRET="12pRN7QnMjgKQRnMjYnS29AvJvl0cyMJftK5TM9z40"
