--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "prisma": "^5.18.0"
   }
