--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^5.18.0"
   }
 }
