--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "prisma": "^5.18.0"
+    "prisma": "^5.18.0",
+    "winston": "^3.14.2"
   }
 }
