feat(frontend): :sparkles: Setup api context and protecte routes that require auth

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -19,10 +19,12 @@
     ],
     "baseUrl": ".",
     "paths": {
+      "@/contexts/*": ["contexts/*"],
       "@/*": ["./*"]
     }
   },
   "include": [
+    "contexts/**/*.js",
     "**/*.js",
     "**/*.jsx",
     "next-env.d.ts"
