--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate:dev": "dotenv -e .env -- prisma migrate dev",
+    "migrate:test": "dotenv -e .env.test -- prisma migrate deploy",
+    "test": "dotenv -e .env.test -- jest",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
@@ -23,5 +25,12 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^5.18.0",
     "winston": "^3.14.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "dotenv-cli": "^7.4.2",
+    "faker": "^6.6.6",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
