--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "analyze-deps": "madge --circular src",
+    "visualize-deps": "madge --image dependency-graph.svg src",
     "seed": "node prisma/seed.js",
     "migrate": "dotenv -e .env -- prisma migrate deploy && npm run seed",
-    "migrate:dev": "dotenv -e .env -- prisma migrate dev && npm run seed",
-    "migrate:test": "dotenv -e .env.test -- prisma migrate deploy && npm run seed",
+    "migrate-dev": "dotenv -e .env.development -- prisma migrate dev && npm run seed",
+    "migrate-test": "dotenv -e .env.test -- prisma migrate deploy && npm run seed",
     "test": "dotenv -e .env.test -- jest",
     "dev": "nodemon src/server.js"
   },
