--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
+    "test:watch": "dotenv -e .env.test jest --watch",
+    "test:coverage": "dotenv -e .env.test jest --coverage",
     "analyze-deps": "madge --circular src",
     "visualize-deps": "madge --image dependency-graph.svg src",
     "seed": "node prisma/seed.js",
     "migrate": "dotenv -e .env -- prisma migrate deploy && npm run seed",
     "migrate-dev": "dotenv -e .env.development -- prisma migrate dev && npm run seed",
     "migrate-test": "dotenv -e .env.test -- prisma migrate deploy && npm run seed",
-    "test": "dotenv -e .env.test -- jest",
     "dev": "nodemon src/server.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testTimeout": 30000,
+    "coverageDirectory": "coverage",
+    "testMatch": [
+      "**/__tests__/**/*.test.js",
+      "**/*.test.js"
+    ]
   },
   "keywords": [],
   "author": "",
