--- a/backend/.env.development
+++ b/backend/.env.development
@@ -1,5 +1,6 @@
 NODE_ENV="development"
-DATABASE_URL="postgresql://root:root@localhost:5432/dev?schema=public"
+# DATABASE_URL="postgresql://root:root@localhost:5432/dev?schema=public"
+DATABASE_URL="postgresql://root:root@localhost:5432/mydb?schema=public"
 JWT_SECRET="12pRN7QnMjgKQRnMjYnS29AvJvl0cyMJftK5TM9z40"
 LOG_LEVEL="info"
 CORS_ORIGIN="http://localhost:3000"
