--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "^5.19.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "joi": "^17.13.3",
