refactor(root): :art: add linter rules

--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
   "name": "prueba-react-node",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
-  "type": "module",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.25.1",
+    "editorconfig": "^2.0.0",
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "prettier": "^3.3.3"
+  }
 }
