--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,17 @@
 {
-    "conventionalCommits.scopes": [
-      "backend",
-      "frontend",
-      "root"
-    ],
+    "conventionalCommits.scopes": ["backend", "frontend", "root"],
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-      "source.fixAll": "always"
+        "source.fixAll": "always"
     },
     "eslint.validate": [
-      "javascript",
-      "javascriptreact",
-      "typescript",
-      "typescriptreact"
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact"
     ],
     "prettier.semi": false,
     "prettier.singleQuote": true,
     "prettier.trailingComma": "es5",
-    "prettier.printWidth":80
-  }
+    "prettier.printWidth": 80
+}
